[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xylen"
version = "1.2.1"
description = "A minimal, async-first Python web framework with ultra-low latency and low memory usage."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Parham Fakhar", email = "parhamfakhari.nab2020@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
keywords = ["web", "async", "asgi", "framework", "fast", "lightweight", "openapi", "swagger"]
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "uvicorn>=0.20.0",
    "pytest>=7.0",
    "watchfiles>=0.20.0",
    "httpx>=0.25.0"
]

[project.urls]
Homepage = "https://github.com/Parhamfakhar1/xylen"
Repository = "https://github.com/Parhamfakhar1/xylen"
Documentation = "https://github.com/Parhamfakhar1/xylen#readme"
Changelog = "https://github.com/Parhamfakhar1/xylen/releases"

[project.scripts]
xylen = "xylen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xylen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["TestCase"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning"
]
addopts = "-v --tb=short"